--- a/index.html
+++ b/index.html
@@ -9,45 +9,36 @@
   <body>
     <div class="container setup-container">
       <div class="panel">
-        <div class="panel-header"><h3>1. 수강 가능한 강좌</h3></div>
-        <div class="panel-body table-container">
-          <table id="available-courses-table">
-            <thead>
-              <tr>
-                <th>담기</th>
-                <th>교과목명</th>
-                <th>분반</th>
-                <th>담당교수</th>
-                <th>이수구분</th>
-              </tr>
-            </thead>
-            <tbody id="offered-courses-body"></tbody>
-          </table>
-        </div>
-      </div>
+        <div class="panel-header"><h3>연습 설정</h3></div>
+        <div
+          class="panel-body"
+          style="height: auto; text-align: center; padding: 40px"
+        >
+          <p style="font-size: 1.1rem">연습에 사용할 과목 개수를 선택하세요.</p>
 
-      <div class="panel">
-        <div class="panel-header"><h3>2. 연습할 과목 (예비수강)</h3></div>
-        <div class="panel-body table-container">
-          <table id="selected-courses-table">
-            <thead>
-              <tr>
-                <th>No.</th>
-                <th>교과목명</th>
-                <th>분반</th>
-                <th>이수구분</th>
-              </tr>
-            </thead>
-            <tbody id="selected-courses-body"></tbody>
-          </table>
+          <div class="setting-row">
+            <label for="course-count-select">과목 개수:</label>
+            <select id="course-count-select">
+              <option value="1">1개</option>
+              <option value="2">2개</option>
+              <option value="3">3개</option>
+              <option value="4">4개</option>
+              <option value="5" selected>5개</option>
+              <option value="6">6개 (모두)</option>
+            </select>
+          </div>
+
+          <p
+            class="small-note"
+            style="margin-top: 25px; font-size: 0.9rem; color: #777"
+          >
+            * 전체 6개의 과목 풀에서 무작위로 선택됩니다.
+          </p>
         </div>
       </div>
     </div>
-
     <div class="setup-footer">
-      <button id="start-practice-button" disabled>
-        연습 시작하기 (로그인)
-      </button>
+      <button id="start-practice-button">연습 시작하기 (로그인)</button>
     </div>
 
     <script src="setting.js"></script>
