feat: 11시59분 55초 카운트다운 시작 기능 추가

--- a/login.html
+++ b/login.html
@@ -13,9 +13,15 @@
         <div class="blue"></div>
       </div>
       <div class="login-content">
-        <div class="uni-labels">KOREATECH<br>한국기술교육대학교</div>
+        <div class="uni-labels">KOREATECH<br />한국기술교육대학교</div>
+
         <div class="login-form-box">
+          <div class="server-time-box">
+            <span id="server-time">11:59:55.000</span>
+          </div>
+
           <div class="login-title">수강신청 시스템</div>
+
           <div class="login-fields">
             <div class="input-row">
               <label for="login-id">아이디</label>
@@ -30,6 +36,7 @@
               </button>
             </div>
           </div>
+
           <div class="caps-tip">
             아이디/ 비밀번호 입력 시 <b>Caps Lock</b> 키를 확인하시길 바랍니다.
           </div>
