--- a/sugangPractice.html
+++ b/sugangPractice.html
@@ -9,12 +9,6 @@
   <body>
     <div class="container">
       <div class="tabs">
-        <div class="tab-group-left">
-          <button class="tab-btn active">수강신청(장바구니)</button>
-          <button class="tab-btn">조회</button>
-          <button class="tab-btn">도움말</button>
-        </div>
-
         <div class="tab-group-right">
           <button class="tab-btn" id="back-to-settings-btn">
             ↩ 과목 설정으로 돌아가기
@@ -89,7 +83,7 @@
                   <th>이수구분</th>
                   <th>교과목명</th>
                   <th>분반</th>
-                  <th>담당교V수</th>
+                  <th>담당교수</th>
                 </tr>
               </thead>
               <tbody id="registered-courses-body"></tbody>
