--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -63,7 +63,7 @@
   </head>
   <body>
     <div class="warning-card">
-      <h1>한모</h1>
+      <h1>한클</h1>
       <p>
         본 프로그램은 한기대 수강신청
         <span style="color: #d90429">연습 사이트</span> 입니다
