--- a/login.html
+++ b/login.html
@@ -25,11 +25,11 @@
           <div class="login-fields">
             <div class="input-row">
               <label for="login-id">아이디</label>
-              <input id="login-id" type="text" />
+              <input id="login-id" type="text" placeholder="입력x" />
             </div>
             <div class="input-row">
               <label for="login-pw">비밀번호</label>
-              <input id="login-pw" type="password" />
+              <input id="login-pw" type="password" placeholder="입력x" />
               <button class="login-btn" id="login-button">
                 로그인
                 <span class="login-btn-sub">Login</span>
