--- a/login.html
+++ b/login.html
@@ -32,15 +32,11 @@
           <div class="login-fields">
             <div class="input-row">
               <label for="login-id">아이디</label>
-              <input
-                id="login-id"
-                type="text"
-                placeholder="학번을 입력하세요"
-              />
+              <input id="login-id" type="text" placeholder="입력안해도됨" />
             </div>
             <div class="input-row">
               <label for="login-pw">비밀번호</label>
-              <input id="login-pw" type="password" placeholder="비밀번호" />
+              <input id="login-pw" type="password" placeholder="입력안해도됨" />
               <button class="login-btn" id="login-button">
                 로그인
                 <span class="login-btn-sub">Login</span>
